testsuite/tests/typing-layouts-missing-cmi/test_unboxed_version.compilers.reference
File "test_unboxed_version.ml", line 1:
Error: In the signature of Defs.Make(Defs.Arg): The type Unloaded.Record.t
       has no unboxed version.
